# static_resource

./: .gitignore  pyproject.toml
image/pixiv/: file_list.csv
src/: compress_image.py  pixiv_info.py
